- Fix typo in OptionsNG conversion
Reported by:	pointyhat
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315743 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/jerm/Makefile
+++ b/comms/jerm/Makefile
@@ -42,7 +42,7 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/init.sh ${PREFIX}/libexec/jerm
 	${INSTALL_SCRIPT} ${WRKSRC}/rock.pl ${PREFIX}/libexec/jerm
 .endif
-.if ${PORT_OPTIONS:MOCS}
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}
 .endif
