- Use greater or equal so PORTREVISION bump doesn't break it
Reported by:	pointyhat
Approved by:	portmgr (bdrewery), jpaetzel (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315744 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/baresip/Makefile
+++ b/audio/baresip/Makefile
@@ -8,8 +8,8 @@ MASTER_SITES=	http://www.creytiv.com/pub/
 MAINTAINER=	crees@FreeBSD.org
 COMMENT=	Small SIP client
 
-BUILD_DEPENDS=	re=${PORTVERSION}:${PORTSDIR}/audio/re \
-		rem=${PORTVERSION}:${PORTSDIR}/audio/rem
+BUILD_DEPENDS=	re>=${PORTVERSION}:${PORTSDIR}/audio/re \
+		rem>=${PORTVERSION}:${PORTSDIR}/audio/rem
 RUN_DEPENDS:=	${BUILD_DEPENDS}
 
 USE_GMAKE=	yes
