- Fix typo in OptionsNG conversion
PR:		ports/177600
Submitted by:	Andrei Lavreniyuk <andy.lavr@gmail.com>
Approved by:	portmgr (miwi), jpaetzel (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315748 35697150-7ecd-e111-bb59-0022644237b5

--- a/palm/pilot-link/Makefile
+++ b/palm/pilot-link/Makefile
@@ -40,7 +40,7 @@ LIB_DEPENDS+=	usb-0.1.8:${PORTSDIR}/devel/libusb
 CONFIGURE_ARGS+=--enable-libusb
 LDFLAGS+=	-L${PREFIX}/lib -lusb
 
-.if ! ${PORT_OPTIONS:THREADS}
+.if ! ${PORT_OPTIONS:MTHREADS}
 IGNORE=		cannot be built: USB support requires THREADS turned on.  Please reconfigure using 'make config'
 .else
 LDFLAGS+=	${PTHREAD_LIBS}
