- Fix pkg-plist [1] - Trim Makefile header - Use OptionsNG DOCS
PR:		ports/177605 [1]
Submitted by:	John Marino <draco@marino.st> [1]
Approved by:	portmgr (miwi), jpaetzel (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315749 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/switzerland/Makefile
+++ b/security/switzerland/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	Switzerland
-# Date created:				08/08/08
-# Whom:					Alexey Dokuchaev <danfe@FreeBSD.org>
-#
+# Created by: Alexey Dokuchaev <danfe@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	switzerland
 PORTVERSION=	0.1.0
@@ -18,13 +14,15 @@ USE_PYTHON=	yes
 USE_PYDISTUTILS=	yes
 PORTDOCS=	*
 
+.include <bsd.port.options.mk>
+
 post-patch:
 	@${REINPLACE_CMD} -e 's,gcc -O3,${CC} ${CFLAGS}, ; \
 		s,"Switzerland","switzerland", ; \
 		s,"0\.0","${PORTVERSION}",' ${WRKSRC}/setup.py
 
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/BUGS.txt ${WRKSRC}/README.txt \
 		${WRKSRC}/doc/* ${DOCSDIR}
