- update to 0.4e - unbreak as distfile is unversioned   - future mismatches should be investigated as potential software updates
Approved by:	portmgr (erwin)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315750 35697150-7ecd-e111-bb59-0022644237b5

--- a/science/checkmol/Makefile
+++ b/science/checkmol/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	checkmol
-PORTVERSION=	0.4d
+PORTVERSION=	0.4e
 CATEGORIES=	science
 MASTER_SITES=	http://merian.pch.univie.ac.at/pch/download/chemistry/checkmol/
 DISTNAME=	${PORTNAME}
@@ -15,8 +15,6 @@ COMMENT=	Analyze molecules for the presence of functional groups
 LICENSE=	GPLv2 # (or later)
 
 NO_WRKSUBDIR=	yes
-
-BROKEN=	checksum mismatch
 
 EXTRACT_CMD=	${CP}
 EXTRACT_BEFORE_ARGS=	#
