--- a/science/py-obspy.taup/Makefile
+++ b/science/py-obspy.taup/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	obspy.taup
 PORTVERSION=	0.7.0
+PORTREVISION=	1
 CATEGORIES=	science python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
