--- a/net/ntp/Makefile
+++ b/net/ntp/Makefile
@@ -7,7 +7,7 @@
 
 PORTNAME=	ntp
 PORTVERSION?=	4.2.6p5
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	net ipv6
 MASTER_SITES=	ftp://ftp.udel.edu/pub/ntp/ntp4/ \
 		http://www.eecis.udel.edu/~ntp/ntp_spool/ntp4/ \
@@ -56,7 +56,7 @@ PLIST_SUB+=		SSL=""
 CONFIGURE_ARGS+=        --enable-ipv6
 .endif
 
-.if !defined(WITH_NTP_SIGND)
+.if defined(WITH_NTP_SIGND)
 CONFIGURE_ARGS+=        --enable-ntp-signd
 .endif
 
