--- a/textproc/libextractor/Makefile
+++ b/textproc/libextractor/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	libextractor
 PORTVERSION=	0.6.2
-PORTREVISION=	11
+PORTREVISION=	12
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GNU}
 MASTER_SITE_SUBDIR=	${PORTNAME}
@@ -11,7 +11,8 @@ MASTER_SITE_SUBDIR=	${PORTNAME}
 MAINTAINER=	vd@FreeBSD.org
 COMMENT=	Library for keyword extraction
 
-USE_GNOME=	gnomehack glib20 gtk20
+USE_GNOME=	glib20 gtk20
+USES=	pathfix
 USE_PYTHON=	yes
 USE_AUTOTOOLS=	libltdl
 GNU_CONFIGURE=	yes
