- Fix inverted logic for USB option
PR:		ports/177621
Submitted by:	Eric Krausser <eric@krausser-edv.de>
Approved by:	portmgr (bapt), culot (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315759 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/sane-backends/Makefile
+++ b/graphics/sane-backends/Makefile
@@ -53,7 +53,7 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 .include "Makefile.man"
 .include <bsd.port.pre.mk>
 
-.if ${PORT_OPTIONS:MUSB}
+.if empty(PORT_OPTIONS:MUSB)
 CONFIGURE_ARGS+=	--disable-libusb
 .endif
 
