emulators/wine-devel: - Allow overriding MAINTAINER and LATEST_LINK in child ports. emulators/i386-wine-devel: - Set MAINTAINER and LATEST_LINK.
Approved by:	portmgr (bdrewery), maintainer, maintainer's mentor (eadler)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315768 35697150-7ecd-e111-bb59-0022644237b5

--- a/emulators/i386-wine-devel/Makefile
+++ b/emulators/i386-wine-devel/Makefile
@@ -3,6 +3,9 @@
 
 PKGNAMEPREFIX=	i386-
 
+MAINTAINER=	dbn@FreeBSD.org
+LATEST_LINK=	${PKGNAMEPREFIX}wine-devel
+
 # Use the wine port to do most of the heavy lifting
 MASTERDIR=	${.CURDIR}/../wine-devel
 PKGINSTALL=	${.CURDIR}/files/pkg-install
