The new audacious that is in the ports tree can no longer load .tar.gz'ed skin files, therefore x11-themes/audacious-skins is currently functionally broken [1]. There were also a few very old skin formats that are no longer supported by audacious. Those skins in question have been removed. All skins are now zip'ed and have been verified to work with audacious.
Notified by:	avg
Approved by:	portmgr (erwin)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315776 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-themes/audacious-skins/Makefile
+++ b/x11-themes/audacious-skins/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	audacious-skins
-PORTVERSION=	0.1
-PORTREVISION=	11
+PORTVERSION=	0.3
 CATEGORIES=	x11-themes
 MASTER_SITES=	CRITICAL
 
@@ -12,8 +11,13 @@ COMMENT=	Collection of audacious skins
 
 BUILD_DEPENDS=	audacious:${PORTSDIR}/multimedia/audacious
 
+USE_XZ=		yes
 NO_BUILD=	yes
 
 DATADIR=	${PREFIX}/share/audacious
+
+do-install:
+	${MKDIR} ${DATADIR}/Skins
+	${INSTALL_DATA} ${WRKSRC}/Skins/*.zip ${DATADIR}/Skins
 
 .include <bsd.port.mk>
