Add workaround to fix crash at startup
Submitted by:	avg
Approved by:	portmgr (erwin)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315777 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11/kactivitymanagerd/Makefile
+++ b/x11/kactivitymanagerd/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	kactivitymanagerd
 PORTVERSION=	${KDE4_VERSION}
+PORTREVISION=	1
 CATEGORIES=	x11 kde
 MASTER_SITES=	${MASTER_SITE_KDE}
 MASTER_SITE_SUBDIR=	${KDE4_BRANCH}/${PORTVERSION}/src
@@ -22,6 +23,9 @@ USE_QT4=	declarative opengl script sql \
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
 DISTINFO_FILE=	${.CURDIR}/../kactivities/distinfo
+
+# https://bugs.kde.org/show_bug.cgi?id=305529#c10
+CMAKE_ARGS+=    -DCMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS=-rdynamic
 
 # 'USES= moderncompiler' would help, for now force dependence on gcc
 USE_GCC=	4.6+
