Add upstream patch to fix crash at startup after recent glib2 update
PR:		ports/177652
Reported by:	Eric Douzet <eric.douzet@gmail.com>
Approved by:	portmgr (bdrewery)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315778 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/mirage/Makefile
+++ b/graphics/mirage/Makefile
@@ -1,13 +1,9 @@
-# New ports collection makefile for:	mirage
-# Date created:		31 January 2007
-# Whom:			Andrew Pantyukhin <infofarmer@FreeBSD.org>
-#
+# Created by: Andrew Pantyukhin <infofarmer@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	mirage
 PORTVERSION=	0.9.5.2
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	BERLIOS/mirageiv
 
