--- a/net/svnup/Makefile
+++ b/net/svnup/Makefile
@@ -3,7 +3,8 @@
 PORTNAME=	svnup
 PORTVERSION=	0.56
 CATEGORIES=	net
-MASTER_SITES=	http://jcm.dsl.visi.com/freebsd/svnup/
+MASTER_SITES=	http://jcm.dsl.visi.com/freebsd/svnup/ \
+  		LOCAL/bdrewery/${PORTNAME}/
 
 MAINTAINER=	jcm@visi.com
 COMMENT=	Lightweight program to pull source using the svn protocol
