--- a/ftp/wget/Makefile
+++ b/ftp/wget/Makefile
@@ -18,9 +18,9 @@ GNU_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	yes
 
 OPTIONS_RADIO=	SSL
-OPTIONS_RADIO_SSL=	GNUTLS OPENSSL
+OPTIONS_RADIO_SSL=GNUTLS OPENSSL
 OPTIONS_DEFINE=	IPV6 NLS IDN
-OPTIONs_DEFAULT=	OPENSSL IDN
+OPTIONS_DEFAULT=OPENSSL IDN
 
 .include <bsd.port.options.mk>
 
