Update flash to 11.2r202.280
Security:	15236023-a21b-11e2-a460-208984377b34
Reviewed by:	delphij
Approved by:	portmgr (bdrewery)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315788 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/linux-f10-flashplugin11/Makefile
+++ b/www/linux-f10-flashplugin11/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	flashplugin
-PORTVERSION=	11.2r202.275
+PORTVERSION=	11.2r202.280
 CATEGORIES=	www multimedia linux
 MASTER_SITES=	http://fpdownload.macromedia.com/get/flashplayer/pdc/${PORTVERSION:C/r/\./}/:plugin \
 		LOCAL/nox:suplib
@@ -54,7 +54,9 @@ post-install:
 	@${MKDIR} ${PREFIX}/share/applications/
 	@${INSTALL_DATA} ${WRKDIR}/usr/share/applications/flash-player-properties.desktop ${DESKTOPDIR}
 	@(cd ${WRKDIR}/usr/share/icons && ${COPYTREE_SHARE} hicolor ${PREFIX}/share/icons)
-	-@update-desktop-database
+.if ${PORT_OPTIONS:MGNOME}
+	@update-desktop-database
+.endif
 
 .include "${PORTSDIR}/www/linux-mplayer-plugin/Makefile.npapi"
 .include <bsd.port.post.mk>
