Fix on FreeBSD 8+
PR:		ports/172803
Submitted by:	Jan Beich
Approved by:	maintainer timeout (sunpoet, ~6 months)
Approved by:	portmgr (decke)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315794 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/py-psutil/Makefile
+++ b/sysutils/py-psutil/Makefile
@@ -1,12 +1,9 @@
-# New ports collection makefile for:	py-psutil
-# Date created:				04 May 2010
-# Whom:					Ju Pengfei <jupengfei@gmail.com>
-#
+# Created by: Ju Pengfei <jupengfei@gmail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	psutil
 PORTVERSION=	0.6.1
+PORTREVISION=	1
 CATEGORIES=	sysutils python
 MASTER_SITES=	GOOGLE_CODE
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
