- Fix builds when ENV is set and not executable by using proper SETENV for /usr/bin/env   This fixes all cases of incorrect ENV/SETENV usage.
Approved by:	portmgr (implicit)
With hat:	portmgr
PR:		ports/173559


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315798 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libtai/Makefile
+++ b/devel/libtai/Makefile
@@ -46,7 +46,7 @@ pre-install:
 .endfor
 
 post-build:
-	@${ENV} LD_LIBRARY_PATH=${WRKSRC} \
+	@${SETENV} LD_LIBRARY_PATH=${WRKSRC} \
 		${WRKSRC}/leapsecs < ${WRKSRC}/leapsecs.txt > \
 		${WRKSRC}/leapsecs.dat
 
