--- a/net-mgmt/nagios-check_tftp/Makefile
+++ b/net-mgmt/nagios-check_tftp/Makefile
@@ -1,14 +1,10 @@
-# New ports collection makefile for:   check_tftp
-# Date created:        7 August 2011
-# Whom:                hr <holgerrepp@googlemail.com>
-#
+# Created by: hr <holgerrepp@googlemail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	check_tftp
 PORTVERSION=	1.0.1
 CATEGORIES=	net-mgmt
-MASTER_SITES=	http://mathias-kettner.de/download/
+MASTER_SITES=	http://mymixrechner.de/freebsd-ports/distfiles/
 PKGNAMEPREFIX=	nagios-
 DISTNAME=	${PORTNAME}
 EXTRACT_SUFX=
