--- a/mail/sieve-connect/Makefile
+++ b/mail/sieve-connect/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	sieve-connect
-PORTVERSION=	0.84
+PORTVERSION=	0.85
 CATEGORIES=	mail
 MASTER_SITES=	http://people.spodhuis.org/phil.pennock/software/ \
 		ftp://ftp.renatasystems.org/pub/FreeBSD/ports/distfiles/
@@ -17,7 +17,8 @@ LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
 RUN_DEPENDS=	p5-Authen-SASL>=0:${PORTSDIR}/security/p5-Authen-SASL \
 		p5-IO-Socket-INET6>=0:${PORTSDIR}/net/p5-IO-Socket-INET6 \
-		p5-IO-Socket-SSL>=0:${PORTSDIR}/security/p5-IO-Socket-SSL \
+		p5-IO-Socket-SSL>=1.14:${PORTSDIR}/security/p5-IO-Socket-SSL \
+		p5-Mozilla-PublicSuffix>=0:${PORTSDIR}/dns/p5-Mozilla-PublicSuffix \
 		p5-Net-DNS>=0:${PORTSDIR}/dns/p5-Net-DNS \
 		p5-ReadLine-Gnu>=0:${PORTSDIR}/devel/p5-ReadLine-Gnu \
 		p5-Term-ReadKey>=0:${PORTSDIR}/devel/p5-Term-ReadKey
@@ -28,7 +29,9 @@ PLIST_FILES=	bin/sieve-connect
 
 MAN1=		sieve-connect.1
 
-.if !defined(NOPORTDOCS)
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MDOCS}
 PORTDOCS=	ChangeLog README TODO
 .endif
 
@@ -36,7 +39,7 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/sieve-connect ${PREFIX}/bin/sieve-connect
 	${INSTALL_MAN} ${WRKSRC}/sieve-connect.1 \
 		${MANPREFIX}/man/man1/sieve-connect.1
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
 .for _doc in ${PORTDOCS}
 	${INSTALL_DATA} ${WRKSRC}/${_doc} ${DOCSDIR}/${_doc}
