- Does not build on 8.3-i386. Does build ok on 9.1-i386.
ports/155546 may fix this. The issue is that the libtool linking stage
is not respecting the CC=gcc46 environment that is used to compile
the rest of the port first. This causes the linking to use 'cc' instead.

.libs/ctl.o(.text.__i686.get_pc_thunk.bx+0x0): In function `__i686.get_pc_thunk.bx':
: multiple definition of `__i686.get_pc_thunk.bx'
/usr/lib/crtbeginS.o(.gnu.linkonce.t.__i686.get_pc_thunk.bx+0x0): first defined here
*** Error code 1

Approved by:	portmgr (implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315805 35697150-7ecd-e111-bb59-0022644237b5

--- a/science/libctl/Makefile
+++ b/science/libctl/Makefile
@@ -1,10 +1,5 @@
-# ex:ts=8
-# Ports collection Makefile for:	libctl
-# Date created:			Apr 4, 2003
-# Whom:				ijliao
-#
+# Created by: ijliao
 # $FreeBSD$
-#
 
 PORTNAME=	libctl
 PORTVERSION=	3.1
@@ -27,6 +22,10 @@ MAN1=		gen-ctl-io.1
 
 .if ${ARCH} == "sparc64"
 BROKEN=		does not build
+.endif
+
+.if ${ARCH} == i386 && ${OSVERSION} < 901000
+BROKEN=		does not link due to libtool not respecting CC
 .endif
 
 post-install:
