- Upstream rerolled - Add mirror
Diff: http://people.freebsd.org/~bdrewery/dixit-11.11.4.reroll.txt

Approved by:	portmgr (implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315809 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/dixit/Makefile
+++ b/textproc/dixit/Makefile
@@ -3,9 +3,12 @@
 
 PORTNAME=	dixit
 PORTVERSION=	11.11
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTVERSION} \
-		SF/${PORTNAME}/${PORTNAME}_qdb:db
+		SF/${PORTNAME}/${PORTNAME}_qdb:db \
+		LOCAL/bdrewery/${PORTNAME}/ \
+		LOCAL/bdrewery/${PORTNAME}:db
 DISTFILES=	${PORTNAME}-${PORTVERSION}.${QT_VER}.tgz \
 		${_DB_D}:db
 EXTRACT_ONLY=	${PORTNAME}-${PORTVERSION}.${QT_VER}.tgz
