- Fix build by adding missing USES=bison broken by r313517
Approved by:	portmgr (implicit)
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315810 35697150-7ecd-e111-bb59-0022644237b5

--- a/net-mgmt/argus3-clients/Makefile
+++ b/net-mgmt/argus3-clients/Makefile
@@ -17,9 +17,10 @@ CONFLICTS=	argus-clients-2* argus-clients-sasl-2*
 OPTIONS_DEFINE=	GEOIP MANPAGES MYSQL SASL
 OPTIONS_DEFAULT=MANPAGES MYSQL SASL
 
+USES=		bison
+
 .include <bsd.port.options.mk>
 
-USE_BISON=	build
 GNU_CONFIGURE=	true
 USE_NCURSES=	yes
 USE_PERL5=	yes
