- Add missing LZO_DESC
PR:		ports/177586
Submitted by:	Ilya A. Arkhipov <rum1cro@yandex.ru>
Approved by:	Thomas Zander <thomas.e.zander@googlemail.com> (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315816 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/mencoder/Makefile
+++ b/multimedia/mencoder/Makefile
@@ -18,6 +18,7 @@ OPTIONS_DEFINE= AMR_NB AMR_WB BLURAY CDIO CDPARANOIA DEBUG DIRAC \
 OPTIONS_DEFAULT=GIF IPV6 OCFLAGS RTCPU WIN32 X264 XVID
 
 BLURAY_DESC?=	BluRay support
+LZO_DESC?=	Enable external liblzo library
 OCFLAGS_DESC?=	Use optimized compiler flags
 OTCHAIN_DESC?=	Use gcc 4.6+ toolchain on legacy systems
 REAL_DESC?=	Enable realplayer plugin
