- Take MAINTAINERship - Adjust style issues - Add additional MASTER_SITES
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315818 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/nss-pam-ldapd-sasl/Makefile
+++ b/net/nss-pam-ldapd-sasl/Makefile
@@ -1,17 +1,17 @@
 # Created by: rflynn@acsalaska.net
 # $FreeBSD$
 
-PORTNAME=		nss-pam-ldapd
-PKGNAMESUFFIX=		-sasl
+PORTNAME=	nss-pam-ldapd
+PKGNAMESUFFIX=	-sasl
 
-MAINTAINER=		ports@FreeBSD.org
-COMMENT=		Advanced fork of nss_ldap with sasl support
+MAINTAINER=	zi@FreeBSD.org
+COMMENT=	Advanced fork of nss_ldap with sasl support
 
-LICENSE=		# pet portlint
+LICENSE=	# pet portlint
 
 OPTIONS_SET+=	SASL
 
-SLAVE_PORT=		sasl # In case we come up with more
-MASTERDIR=		${.CURDIR}/../nss-pam-ldapd
+SLAVE_PORT=	sasl # In case we come up with more
+MASTERDIR=	${.CURDIR}/../nss-pam-ldapd
 
 .include "${MASTERDIR}/Makefile"
