- Update to 2.4 - Add LICENSE - Switch to new 'created by' header
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315820 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/userinfo/Makefile
+++ b/sysutils/userinfo/Makefile
@@ -1,17 +1,16 @@
-# Ports collection Makefile for:	userinfo
-# Date created:		5 November 2002
-# Whom:			Ben Kibbey <bjk@arbornet.org>
-#
+# Created by: Ben Kibbey <bjk@arbornet.org>
 # $FreeBSD$
-#
 
 PORTNAME=	userinfo
-PORTVERSION=	2.3
+PORTVERSION=	2.4
 CATEGORIES=	sysutils
 MASTER_SITES=	SF/${PORTNAME}/${PORTVERSION}
 
 MAINTAINER=	zi@FreeBSD.org
 COMMENT=	Show information about local users
+
+LICENSE=	GPLv2
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USE_AUTOTOOLS=	libtool
 USE_BZIP2=	yes
