- Update to 3.3.8 - Cleanup Makefile header
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315837 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/ro-hunspell/Makefile
+++ b/textproc/ro-hunspell/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	ro-hunspell
-# Date created:		2011-07-21
-# Whom:			Baptiste Daroussin <bapt@FreeBSD.org>
-#
+# Created by: Baptiste Daroussin <bapt@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	hunspell
-PORTVERSION=	3.3.7
+PORTVERSION=	3.3.8
 CATEGORIES=	textproc
 MASTER_SITES=	SF/rospell/Romanian%20dictionaries/dict-${PORTVERSION}/
 PKGNAMEPREFIX=	ro-
