- Add p5-MooseX-Role-Strict 0.05
When using Moose::Role, a class which provides a method a role provides will
silently override that method. This can cause strange, hard-to-debug errors when
the role's methods are not called. Simple use MooseX::Role::Strict instead of
Moose::Role and overriding a role's method becomes a composition-time failure.
See the synopsis for a resolution.

WWW: http://search.cpan.org/dist/MooseX-Role-Strict/

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315843 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2335,6 +2335,7 @@
     SUBDIR += p5-MooseX-RelatedClassRoles
     SUBDIR += p5-MooseX-Role-Loggable
     SUBDIR += p5-MooseX-Role-Parameterized
+    SUBDIR += p5-MooseX-Role-Strict
     SUBDIR += p5-MooseX-Role-WithOverloading
     SUBDIR += p5-MooseX-Runnable
     SUBDIR += p5-MooseX-SemiAffordanceAccessor
