Fix dependency on devel/llvm31.
Feature safe:	yes
Reviewed by:	brooks, crees


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315847 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/clang31/Makefile
+++ b/lang/clang31/Makefile
@@ -28,8 +28,8 @@ WRKSRC=		${WRKDIR}/${LLVM_NAME}
 BUILD_WRKSRC=	${WRKSRC}/tools/clang
 INSTALL_WRKSRC=	${WRKSRC}/tools/clang
 
-BUILD_DEPENDS+=	llvm31>=${PORTVERSION}:${PORTSDIR}/devel/llvm
-RUN_DEPENDS+=	llvm31>=${PORTVERSION}:${PORTSDIR}/devel/llvm
+BUILD_DEPENDS+=	llvm31>=${PORTVERSION}:${PORTSDIR}/devel/llvm31
+RUN_DEPENDS+=	llvm31>=${PORTVERSION}:${PORTSDIR}/devel/llvm31
 .if defined(PACKAGE_BUILDING) || defined(MAINTAINER_MODE)
 BUILD_DEPENDS+=	runtest:${PORTSDIR}/misc/dejagnu
 .endif
