- Update to 2.19 - Add LICENSE - Cleanup Makefile header
Changes:	http://search.cpan.org/dist/Text-FIGlet/CHANGES
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315848 35697150-7ecd-e111-bb59-0022644237b5

--- a/misc/p5-Text-FIGlet/Makefile
+++ b/misc/p5-Text-FIGlet/Makefile
@@ -1,11 +1,8 @@
-# New ports collection makefile for:	p5-Text-Figlet
-# Date created:				24 May 2002
-# Whom:					Daniel B. Hemmerich <dan@spot.org>
-#
+# Created by: Daniel B. Hemmerich <dan@spot.org>
 # $FreeBSD$
 
 PORTNAME=	Text-FIGlet
-PORTVERSION=	2.18
+PORTVERSION=	2.19
 CATEGORIES=	misc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,13 +11,23 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Perl module to provide FIGlet abilities, akin to banner
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 RUN_DEPENDS=	${LOCALBASE}/bin/figlet:${PORTSDIR}/misc/figlet
 TEST_DEPENDS=	p5-Test-Differences>=0:${PORTSDIR}/devel/p5-Test-Differences
 
 PERL_CONFIGURE=	yes
 
-MAN1=		charmap.pl.1 figlet.pl.1 minifig.pl.1 showfigfonts.pl.1
-MAN3=		Text::FIGlet.3 Text::FIGlet::Control.3 Text::FIGlet::Font.3 \
-		Text::FIGlet::LICENSE.3 Text::FIGlet::Ransom.3
+MAN1=		charmap.pl.1 \
+		figlet.pl.1 \
+		minifig.pl.1 \
+		showfigfonts.pl.1
+MAN3=		Text::FIGlet.3 \
+		Text::FIGlet::Control.3 \
+		Text::FIGlet::Font.3 \
+		Text::FIGlet::Illuminated.3 \
+		Text::FIGlet::LICENSE.3 \
+		Text::FIGlet::Ransom.3
 
 .include <bsd.port.mk>
