--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1921,6 +1921,7 @@
     SUBDIR += p5-ExtUtils-CBuilder
     SUBDIR += p5-ExtUtils-CChecker
     SUBDIR += p5-ExtUtils-Command
+    SUBDIR += p5-ExtUtils-Config
     SUBDIR += p5-ExtUtils-Constant
     SUBDIR += p5-ExtUtils-Depends
     SUBDIR += p5-ExtUtils-Install
