- Add p5-ExtUtils-Helpers 0.016
ExtUtils::Helpers provides various portable helper functions for module
building modules.

WWW: http://search.cpan.org/dist/ExtUtils-Helpers/

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315853 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1924,6 +1924,7 @@
     SUBDIR += p5-ExtUtils-Config
     SUBDIR += p5-ExtUtils-Constant
     SUBDIR += p5-ExtUtils-Depends
+    SUBDIR += p5-ExtUtils-Helpers
     SUBDIR += p5-ExtUtils-Install
     SUBDIR += p5-ExtUtils-InstallPaths
     SUBDIR += p5-ExtUtils-LibBuilder
