--- a/devel/p5-Data-Section-Simple/Makefile
+++ b/devel/p5-Data-Section-Simple/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	p5-Data-Section-Simple
-# Date created:		2011-08-01
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Data-Section-Simple
-PORTVERSION=	0.03
+PORTVERSION=	0.04
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,14 +10,10 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Read data from __DATA__
 
-PERL_CONFIGURE=	yes
+BUILD_DEPENDS=	p5-Module-Build-Tiny>=0.013:${PORTSDIR}/devel/p5-Module-Build-Tiny
+
+PERL_MODBUILD=	yes
 
 MAN3=		Data::Section::Simple.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501001
-TEST_DEPENDS+=	p5-Test-Simple>=0.88:${PORTSDIR}/devel/p5-Test-Simple
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
