--- a/www/tt-rss/Makefile
+++ b/www/tt-rss/Makefile
@@ -2,14 +2,18 @@
 # $FreeBSD$
 
 PORTNAME=	tt-rss
-PORTVERSION=	1.7.5
+PORTVERSION=	1.7.8
 CATEGORIES=	www
-MASTER_SITES=	http://tt-rss.org/download/
 
 MAINTAINER=	thierry@FreeBSD.org
 COMMENT=	Tiny Tiny RSS: web-based news feed (RSS/Atom) aggregator
 
 LICENSE=	GPLv2
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	gothfox
+GH_PROJECT=	Tiny-Tiny-RSS
+GH_COMMIT=	9fb91a2
 
 NO_BUILD=	yes
 
