--- a/math/rkward-kde4/Makefile
+++ b/math/rkward-kde4/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	rkward
-PORTVERSION=	0.6.0
-PORTREVISION=	2
+PORTVERSION=	0.6.1
 CATEGORIES=	math
 MASTER_SITES=	SF/${PORTNAME}/Current_Stable_Releases
 PKGNAMESUFFIX=	-kde4
@@ -55,6 +54,8 @@ LR_MOD_DIR=	${LOCALBASE}/lib/R/library
 RUN_DEPENDS+=	${LR_MOD_DIR}/R2HTML/INDEX:${PORTSDIR}/textproc/R-cran-R2HTML	\
 		${LR_MOD_DIR}/XML/INDEX:${PORTSDIR}/textproc/R-cran-XML		\
 		${LR_MOD_DIR}/mvtnorm/INDEX:${PORTSDIR}/math/R-cran-mvtnorm	\
+		${LR_MOD_DIR}/outliers/INDEX:${PORTSDIR}/math/R-cran-outliers	\
+		${LR_MOD_DIR}/tseries/INDEX:${PORTSDIR}/finance/R-cran-tseries	\
 		${LR_MOD_DIR}/car/INDEX:${PORTSDIR}/math/R-cran-car
 .endif
 
