- Update to 1.18 - Pass maintainership to submitter - Trim header
PR:		ports/177671
Submitted by:	Danilo Egea Gondolfo <danilogondolfo@gmail.com>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315865 35697150-7ecd-e111-bb59-0022644237b5

--- a/math/p5-Set-IntSpan/Makefile
+++ b/math/p5-Set-IntSpan/Makefile
@@ -1,17 +1,13 @@
-# New ports collection makefile for:	p5-Set-IntSpan
-# Date created:		February 7, 1998
-# Whom:			Don Croyle <croyle@gelemna.org>
-#
+# Created by: Don Croyle <croyle@gelemna.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Set-IntSpan
-PORTVERSION=	1.16
+PORTVERSION=	1.18
 CATEGORIES=	math perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	danilogondolfo@gmail.com
 COMMENT=	Manages sets of integers
 
 PERL_CONFIGURE=	yes
