--- a/math/open-axiom/Makefile
+++ b/math/open-axiom/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	open-axiom
-PORTVERSION=	1.4.1
-PORTREVISION=	9
+PORTVERSION=	1.4.2
 CATEGORIES=	math
 MASTER_SITES=	SF/${PORTNAME}/${PORTVERSION}
 
@@ -21,6 +20,7 @@ USE_XORG=	x11 ice sm xpm
 USE_ICONV=	yes
 USE_GETTEXT=	yes
 MAKE_JOBS_UNSAFE=yes
+CFLAGS+=	-I${LOCALBASE}/include -L${LOCALBASE}/lib
 
 PLIST_SUB=	AXIOM_VER=${PORTVERSION} GNU_HOST=${CONFIGURE_TARGET}
 
