- Update to 0.18 - Bump PORTEPOCH as versioning scheme had changed - Switch to optionsNG, trim Makefile header
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315870 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/flare/Makefile
+++ b/games/flare/Makefile
@@ -1,16 +1,11 @@
-# New ports collection makefile for:	flare
-# Date created:		03 May 2011
-# Whom:			Dmitry Marakasov <amdmi3@FreeBSD.org>
-#
+# Created by: Dmitry Marakasov <amdmi3@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	flare
-DISTVERSION=	017_1
+PORTVERSION=	0.18
+PORTEPOCH=	1
 CATEGORIES=	games
-MASTER_SITES=	http://cloud.github.com/downloads/clintbellanger/flare-game/ \
-		http://mirror.amdmi3.ru/files/
-DISTNAME=	${PORTNAME}_linux_v${DISTVERSION}
+MASTER_SITES=	SF/${PORTNAME}-game/
 
 MAINTAINER=	amdmi3@FreeBSD.org
 COMMENT=	Free Libre Action Roleplaying Engine
@@ -27,20 +22,14 @@ CMAKE_ARGS=	-DBINDIR="bin" -DDATADIR="share/flare"
 
 LATEST_LINK=	flare-rpg
 
-WRKSRC=		${WRKDIR}/${PORTNAME}_v${DISTVERSION}
-
 PORTDOCS=	*
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
-.if ${OSVERSION} < 802502
-BROKEN=		requires log2(3) support
-.endif
-
+.if ${PORT_OPTIONS:MDOCS}
 post-install:
-.if !defined(NOPORTDOCS)
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}/
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
