--- a/devel/p5-Test-Inter/Makefile
+++ b/devel/p5-Test-Inter/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	Test-Inter
-# Date created:				2010-11-03
-# Whom:					Frederic Culot <culot@FreeBSD.org>
-#
+# Created by: Frederic Culot <culot@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Test-Inter
-PORTVERSION=	1.03
+PORTVERSION=	1.05
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,8 +10,8 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	culot@FreeBSD.org
 COMMENT=	Framework for more readable interactive test scripts
 
-LICENSE_COMB=	dual
 LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
 
 PERL_MODBUILD=	yes
 
